GNOME Bugzilla – Bug 740289
DSI output name missing for screen rotation
Last modified: 2014-11-18 18:37:19 UTC
Created attachment 290883 [details] [review] Patch adding dsi output name for screen rotation On the Dell Venue 8 Pro tablet device there is currently no screen rotation possible due to the lack of DSI display information. In order to enable automatic screen rotation libgnome-desktop needs to be extended at _gnome_rr_output_name_is_builtin_display() function to support DSI display names. The attached patch does this job.
Review of attachment 290883 [details] [review]: That looks fine, but could you please git-format the patch? This helps keep the authorship information, and reasoning behind the patch. Also, could you explain to me how the accelerometer works in that Dell tablet? Is it just an input device with 3 axis, and it "just works" with that gnome-desktop patch added?
Created attachment 290939 [details] [review] Patch adding dsi output name for screen rotation v2 Attaching the requested git patch file. The accelerometer is an IIO device and works with the hid_sensor_accel_3d kernel module. But as it does not create an input device on its own we need an adapter to complete this task. For this purpose we are using the iio sensor proxy: https://github.com/hadess/iio-sensor-proxy After adding the above patch and starting the iio-sensor-proxy the rotation works fine.
Committed after cleaning up the commit message, thanks!