gnome-rr: Adding DSI as a builtin display connector

Add DSI to the output name in
_gnome_rr_output_name_is_builtin_display() to enable screen
rotation on Dell Venue 8 Pro.

https://bugzilla.gnome.org/show_bug.cgi?id=740289